--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -15,15 +15,17 @@
     "@fluentui/react": "^8.110.7",
     "@fluentui/react-icons": "^2.0.206",
     "@react-spring/web": "^9.7.3",
-    "dompurify": "^3.0.4",
+    "dompurify": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "@vitejs/plugin-react": "^4.0.2",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6",
