--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -11,3 +11,4 @@ azure-monitor-opentelemetry==1.0.0b15
 opentelemetry-instrumentation-asgi==0.40b0
 opentelemetry-instrumentation-requests==0.40b0
 opentelemetry-instrumentation-aiohttp-client==0.40b0
+werkzeug==0.16.1
