--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -4,6 +4,7 @@ langchain==0.0.236
 openai[datalib]==0.28.0
 tiktoken==0.4.0
 azure-search-documents==11.4.0b8
+azure-keyvault-secrets==4.7.0
 azure-storage-blob==12.14.1
 uvicorn[standard]==0.23.2
 aiohttp==3.8.5
