--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build -w ",
     "preview": "vite preview"
   },
   "dependencies": {
