--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,11 +33,11 @@
             "source.organizeImports": true
         },
     },
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "python.analysis.autoImportCompletions": true,
-    "python.analysis.typeCheckingMode": "off"
+    // "python.testing.pytestArgs": [
+    //     "tests"
+    // ],
+    // "python.testing.unittestEnabled": false,
+    // "python.testing.pytestEnabled": true,
+    // "python.analysis.autoImportCompletions": true,
+    // "python.analysis.typeCheckingMode": "basic"
 }
