--- a/scripts/requirements.in
+++ b/scripts/requirements.in
@@ -1,6 +1,6 @@
 pypdf
 azure-identity
-azure-search-documents==11.4.0b8
+./azure_search_documents-11.4.0b12-py3-none-any.whl
 azure-ai-formrecognizer
 azure-storage-blob
 azure-storage-file-datalake
