--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -32,7 +32,7 @@ azure-identity==1.15.0
     # via -r requirements.in
 azure-keyvault-secrets==4.7.0
     # via -r requirements.in
-azure-search-documents==11.4.0b8
+./scripts/azure_search_documents-11.4.0b12-py3-none-any.whl
     # via -r requirements.in
 azure-storage-blob==12.18.3
     # via
